Fix failed tests