@@ -24,6 +24,7 @@ import java.util.AbstractMap;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Map;
@@ -38,7 +39,7 @@ public class AssignmentTestUtil {
     ) {
         return new AbstractMap.SimpleEntry<>(
             topicId,
-            Set.of(partitions)
+            new HashSet<>(Arrays.asList(partitions))
         );
     }
 
